--- a/pipeline-keytranslator-sdk.yml
+++ b/pipeline-keytranslator-sdk.yml
@@ -8,6 +8,6 @@ resources:
 jobs:
 - template: 'devops/pipeline-templates/nuget-netstandard-v2.yml@templates'
   parameters:
-    nugetProjectsPath: '**/src/AsyncCaller.Sdk/*.csproj'
-    testProjectsPath: '**/test/AsyncCaller.UnitTests/*.csproj'
-    jobName: 'AsyncCaller.Sdk'
+    nugetProjectsPath: '**/src/KeyTranslator.Sdk/*.csproj'
+    testProjectsPath: '**/test/KeyTranslator.UnitTests/*.csproj'
+    jobName: 'KeyTranslator.Sdk'
