--- a/pipeline-businessevents-sdk.yml
+++ b/pipeline-businessevents-sdk.yml
@@ -10,4 +10,4 @@ jobs:
   parameters:
     nugetProjectsPath: '**/src/BusinessEvents.Sdk/*.csproj'
     testProjectsPath: ''
-    jobName: 'BusinessEvents.Sdk'
+    jobName: 'BusinessEventsSdk'
