--- a/pipeline-configurations-sdk.yml
+++ b/pipeline-configurations-sdk.yml
@@ -10,4 +10,4 @@ jobs:
   parameters:
     nugetProjectsPath: '**/src/Configurations.Sdk/*.csproj'
     testProjectsPath: ''
-    jobName: 'Configurations.Sdk'
+    jobName: 'ConfigurationsSdk'
