--- a/pipeline-logger-sdk.yml
+++ b/pipeline-logger-sdk.yml
@@ -10,4 +10,4 @@ jobs:
   parameters:
     nugetProjectsPath: '**/src/Logger.Sdk/*.csproj'
     testProjectsPath: '**/test/Logger.UnitTests/*.csproj'
-    jobName: 'Logger.Sdk'
+    jobName: 'LoggerSdk'
