Moved logger.sdk.tests to new project following the new csproj style

--- a/pipeline-logger-sdk.yml
+++ b/pipeline-logger-sdk.yml
@@ -9,5 +9,5 @@ jobs:
 - template: 'devops/pipeline-templates/nuget-netstandard-v2.yml@templates'
   parameters:
     nugetProjectsPath: '**/src/Logger.Sdk/*.csproj'
-    testProjectsPath: '**/test/Logger.UnitTests/*.csproj'
+    testProjectsPath: '**/test/Logger.Sdk.UnitTest/*.csproj'
     jobName: 'LoggerSdk'
