--- a/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
+++ b/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="[1.3.1, 2.0)" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="[1.6.4, 2.0)" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="[3.2.4, 4.0)" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="1.4.3" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.7.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.4.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
@@ -24,7 +24,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.AspNet.Sdk</PackageId>
-      <PackageVersion>1.2.6</PackageVersion>
+      <PackageVersion>1.2.8</PackageVersion>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -34,6 +34,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        1.2.8 Bumped version, consolidating versions
         1.2.7 Bumped version, verifying new yaml and build.
         1.2.6 Now logs tokens that are not valid.
         1.2.5 More logging when checking claims principal tenant.
