--- a/src/Configurations.Sdk/Configurations.Sdk.csproj
+++ b/src/Configurations.Sdk/Configurations.Sdk.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="[1.6.4, 2.0)" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="[3.2.4,4.0)" /> 
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.7.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.4.1" /> 
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
@@ -27,7 +27,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Configurations.Sdk</PackageId>
-      <PackageVersion>1.1.8</PackageVersion>
+      <PackageVersion>1.1.9</PackageVersion>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -37,6 +37,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        1.1.9 Bumped version, consolidating versions
         1.1.8 Bumped version, verifying new yaml and build.
         1.1.7 Updated dependencies
         1.1.2 Now also supports netstandard.
