--- a/src/BusinessEvents.Sdk/Nexus.Link.BusinessEvents.Sdk.csproj
+++ b/src/BusinessEvents.Sdk/Nexus.Link.BusinessEvents.Sdk.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.7.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.4.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.7.5" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.4.3" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.BusinessEvents.Sdk</PackageId>
-    <PackageVersion>1.0.7</PackageVersion>
+    <PackageVersion>1.0.8</PackageVersion>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -23,6 +23,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.0.8 Bumped nexus nugets.
       1.0.7 Bumped version, consolidating versions
       1.0.6 Bumped version, verifying new yaml and build.
       1.0.5 Updated dependencies
