--- a/src/Authentication.PlatformService.AspNet.Sdk/Authentication.PlatformService.AspNet.Sdk.csproj
+++ b/src/Authentication.PlatformService.AspNet.Sdk/Authentication.PlatformService.AspNet.Sdk.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>net461;netcoreapp2.1</TargetFrameworks>
-    <RootNamespace>Nexus.Link.Authentication.AspNet.Sdk</RootNamespace>
-    <AssemblyName>Nexus.Link.Authentication.AspNet.Sdk</AssemblyName>
+    <RootNamespace>Nexus.Link.Authentication.PlatformService.AspNet.Sdk</RootNamespace>
+    <AssemblyName>Nexus.Link.Authentication.PlatformService.AspNet.Sdk</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,35 +19,23 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Authentication.AspNet.Sdk\Authentication.AspNet.Sdk.csproj" />
     <ProjectReference Include="..\Authentication.Sdk\Authentication.Sdk.csproj" />
   </ItemGroup>
 
     <PropertyGroup>
-      <PackageId>Nexus.Link.Authentication.AspNet.Sdk</PackageId>
-      <PackageVersion>1.3.0-rc1</PackageVersion>
+      <PackageId>Nexus.Link.Authentication.PlatformService.AspNet.Sdk</PackageId>
+      <PackageVersion>1.0.0</PackageVersion>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
       <PackageProjectUrl>https://github.com/xlent-fulcrum/Xlent.Lever.Fundamentals</PackageProjectUrl>
       <PackageLanguage>en-US</PackageLanguage>
-      <Description>SDK for Nexus Authentication service (for incoming calls).</Description>
+      <Description>SDK for Nexus Authentication in NExus platform services (for incoming calls).</Description>
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
-        1.3.0 Support refactored Authentication
-        1.2.9 Fix for OrganizationAdmin tokens
-        1.2.8 Bumped version, consolidating versions
-        1.2.7 Bumped version, verifying new yaml and build.
-        1.2.6 Now logs tokens that are not valid.
-        1.2.5 More logging when checking claims principal tenant.
-        1.2.4 Updated dependencies
-        1.2.3 Fix: TokenValidationHandler must allow SysAdminUsers to fetch e.g. config for other tenants
-        1.2.2 Fix: TokenValidationHandler asserts same tenant in token as in path or in application tenant
-        1.2.1 Updated dependencies
-        1.2.0 Supports FulcrumAuthorizeAttribute for ASP.NET Core.
-        1.1.0 Supports TokenValidationHandler for ASP.NET Core.
-        1.0.3 Updated dependencies.
-        1.0.0 Changed to Nexus.Link libraries
+        1.0.0 Support refactored Authentication
       </PackageReleaseNotes>
     </PropertyGroup>
 
