--- a/src/Authentication.Sdk/Authentication.Sdk.csproj
+++ b/src/Authentication.Sdk/Authentication.Sdk.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.7.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.4.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.8.0-rc2" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.5.0-rc2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
@@ -18,7 +18,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.Sdk</PackageId>
-      <PackageVersion>1.1.9</PackageVersion>
+      <PackageVersion>1.2.0-rc1</PackageVersion>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -28,6 +28,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        1.2.0 Support refactored Authentication
         1.1.9 Bumped version, consolidating versions
         1.1.8 Bumped version, verifying new yaml and build.
         1.1.7 Updated dependencies
