--- a/src/Configurations.Sdk/Configurations.Sdk.csproj
+++ b/src/Configurations.Sdk/Configurations.Sdk.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.7.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.4.1" /> 
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.8.0-rc2" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.5.0-rc2" /> 
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
