--- a/src/KeyTranslator.Sdk/Keytranslator.Sdk.csproj
+++ b/src/KeyTranslator.Sdk/Keytranslator.Sdk.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.7.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.8.0-rc2" />
   </ItemGroup>
 
   <!--<ItemGroup>
