--- a/src/Logger.Sdk/Logger.Sdk.csproj
+++ b/src/Logger.Sdk/Logger.Sdk.csproj
@@ -9,13 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.7.5" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.4.3" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.7.7" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.4.5" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Logger.Sdk</PackageId>
-    <PackageVersion>1.1.10</PackageVersion>
+    <PackageVersion>1.1.11</PackageVersion>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -24,9 +24,8 @@
     <Description>SDK for Nexus logging service (only for internal use).</Description>
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <PackageReleaseNotes>
-      1.1.10 Bumped nexus nugets.
-      1.1.9 -- = --
-      1.1.8 Bumped version, verifying new yaml and build.
+      1.1.11 Bumped nexus nugets
+      1.1.9 Bumped version, verifying new yaml and build.
       1.1.7 Updated dependencies
       1.1.5 FulcrumLogger now supports ISyncLogger.
       1.1.4 Updated dependencies.
