--- a/src/Authentication.Sdk/Authentication.Sdk.csproj
+++ b/src/Authentication.Sdk/Authentication.Sdk.csproj
@@ -18,7 +18,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.Sdk</PackageId>
-      <PackageVersion>1.2.0-rd13</PackageVersion>
+      <PackageVersion>2.0.0-alpha01</PackageVersion>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -28,7 +28,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
-        1.2.0 Support refactored Authentication
+        2.0.0 Support refactored Authentication
         1.1.11 Bumped nexus nugets
         1.1.9 Bumped version, consolidating versions
         1.1.8 Bumped version, verifying new yaml and build.
