--- a/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
+++ b/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="1.4.4" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.8.0-rc2" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.5.0-rc2" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.9.0-alpha01" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0-alpha01" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
