--- a/src/BusinessEvents.Sdk/Nexus.Link.BusinessEvents.Sdk.csproj
+++ b/src/BusinessEvents.Sdk/Nexus.Link.BusinessEvents.Sdk.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.9.0-alpha01" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0-alpha01" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.9.0-alpha02" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0-alpha02" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.BusinessEvents.Sdk</PackageId>
-    <PackageVersion>1.0.14</PackageVersion>
+    <PackageVersion>1.1.0-alpha01</PackageVersion>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -23,6 +23,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.1.0 Support refactored Authentication
       1.0.14 Bumped nexus nugets
       1.0.7 Bumped version, consolidating versions
       1.0.6 Bumped version, verifying new yaml and build.
