--- a/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
+++ b/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="1.5.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="1.5.1" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.8.7" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.6.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
@@ -24,7 +24,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.AspNet.Sdk</PackageId>
-      <PackageVersion>1.2.18</PackageVersion>
+      <PackageVersion>1.2.19</PackageVersion>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -34,21 +34,22 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
-        1.2.18 Added UseNexusTokenValidationHandler.
+        1.2.19 Bumped nexus nugets
+        1.2.18 Added UseNexusTokenValidationHandler
         1.2.17 Bumped nexus nugets
-        1.2.11 More logging, bumped nugets.
+        1.2.11 More logging, bumped nugets
         1.2.9 Fix for OrganizationAdmin tokens
         1.2.8 Bumped version, consolidating versions
-        1.2.7 Bumped version, verifying new yaml and build.
-        1.2.6 Now logs tokens that are not valid.
-        1.2.5 More logging when checking claims principal tenant.
+        1.2.7 Bumped version, verifying new yaml and build
+        1.2.6 Now logs tokens that are not valid
+        1.2.5 More logging when checking claims principal tenant
         1.2.4 Updated dependencies
         1.2.3 Fix: TokenValidationHandler must allow SysAdminUsers to fetch e.g. config for other tenants
         1.2.2 Fix: TokenValidationHandler asserts same tenant in token as in path or in application tenant
         1.2.1 Updated dependencies
-        1.2.0 Supports FulcrumAuthorizeAttribute for ASP.NET Core.
-        1.1.0 Supports TokenValidationHandler for ASP.NET Core.
-        1.0.3 Updated dependencies.
+        1.2.0 Supports FulcrumAuthorizeAttribute for ASP.NET Core
+        1.1.0 Supports TokenValidationHandler for ASP.NET Core
+        1.0.3 Updated dependencies
         1.0.0 Changed to Nexus.Link libraries
       </PackageReleaseNotes>
     </PropertyGroup>
