--- a/src/Authentication.Sdk/Authentication.Sdk.csproj
+++ b/src/Authentication.Sdk/Authentication.Sdk.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.9.0-alpha02" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0-alpha02" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.9.0-beta01" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0-beta01" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
