--- a/src/Configurations.Sdk/Configurations.Sdk.csproj
+++ b/src/Configurations.Sdk/Configurations.Sdk.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.9.0-alpha02" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0-alpha02" /> 
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.9.0-beta01" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0-beta01" /> 
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
