--- a/src/AsyncCaller.Sdk/Nexus.Link.AsyncCaller.Sdk.csproj
+++ b/src/AsyncCaller.Sdk/Nexus.Link.AsyncCaller.Sdk.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.8.12" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.7.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.8.13" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.7.1" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.AsyncCaller.Sdk</PackageId>
-    <PackageVersion>1.0.19</PackageVersion>
+    <Version>1.0.20</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -23,7 +23,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      1.0.19 Bumped nexus nugets
+      1.0.20 Bumped nexus nugets
       1.0.9 Bumped version, consolidating versions
       1.0.8 Bumped version, verifying new yaml and build.
       1.0.7 BUG: Null pointer exception
