--- a/src/Services.Contracts/azure-pipelines.yml
+++ b/src/Services.Contracts/azure-pipelines.yml
@@ -12,13 +12,13 @@ trigger:
     - master
   paths:
     include:
-    - 'src/Service.Contracts/*'   
+    - 'src/Services.Contracts/*'   
     
 jobs:
 - template: 'templates/netcore/v1/jobs/nuget.yml@azure-devops-tools'
   parameters:
     jobName: 'ServiceContracts'
     testProjectsPath: ''
-    nugetProjectsPath: '**/src/Service.Contracts/*.csproj'
+    nugetProjectsPath: 'src/Services.Contracts/*.csproj'
     nuGetFeedType: external
     publishFeedCredentials: 'prd-nexus-nuget-external'
