--- a/src/Configurations.Sdk/Configurations.Sdk.csproj
+++ b/src/Configurations.Sdk/Configurations.Sdk.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.1.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.4.3" /> 
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.2.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.5.1" /> 
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
@@ -27,7 +27,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Configurations.Sdk</PackageId>
-      <Version>2.0.2</Version>
+      <Version>2.0.3</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -37,9 +37,9 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
-        2.0.2 Bumped nexus nugets
+        2.0.3 Bump
         2.0.0 Support refactored Authentication
-        1.1.21 Bumped nexus nugets
+        1.1.21 Bump
         1.1.9 Bumped version, consolidating versions
         1.1.8 Bumped version, verifying new yaml and build.
         1.1.7 Updated dependencies
