--- a/src/KeyTranslator.Sdk/Keytranslator.Sdk.csproj
+++ b/src/KeyTranslator.Sdk/Keytranslator.Sdk.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.1.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.2.2" />
   </ItemGroup>
 
   <!--<ItemGroup>
@@ -26,7 +26,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.KeyTranslator.Sdk</PackageId>
-    <Version>2.0.1</Version>
+    <Version>2.0.2</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -36,9 +36,9 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      2.0.1 Bumped nexus nugets
+      2.0.2 Bump
       2.0.0 Support refactored Authentication
-      1.3.2 Bumped nexus nugets
+      1.3.2 Bump
       1.3.0 Support for the new versions of TranslateOrLock/ReleaseLock, making it possible to use e.g. colons and slashes in the instance path.
       1.1.14 Fix: Don't cache untranslated values in BatchTranslate
       1.1.13 Bumped nexus nugets
