--- a/src/Authentication.Sdk/Authentication.Sdk.csproj
+++ b/src/Authentication.Sdk/Authentication.Sdk.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.1.2" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.3.6" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.5.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.3.8" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.6.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
@@ -19,7 +19,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.Sdk</PackageId>
-      <Version>2.1.13</Version>
+      <Version>2.2.1</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -29,6 +29,8 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        2.2.1 Bump
+        2.2.0 Added interface IJwtTokenHandler
         2.1.13 Bump
         2.1.6 Added cancellation token
         2.1.5 Added a convenience method for RSA public keys.
