Services.Implementations: 1.12.4 Missing call to overridden method.

--- a/src/Services.Implementations/Services.Implementations.csproj
+++ b/src/Services.Implementations/Services.Implementations.csproj
@@ -20,7 +20,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Implementations</PackageId>
-    <Version>1.12.2</Version>
+    <Version>1.12.4</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -30,6 +30,8 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.12.4 Missing call to overridden method.
+      1.12.3 New signature for event receiver methods.
       1.12.2 Added events for business API.
       1.11.8 Bump
       1.11.4 Added controller injection.
